# pdf-reader

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: PDFViewer.module.css  PDFViewer.tsx  SearchBar.module.css  SearchBar.tsx  StatusBar.module.css  StatusBar.tsx  TabBar.module.css  TabBar.tsx  Toolbar.module.css  Toolbar.tsx
src/hooks/: usePDF.ts  useRecents.ts  useTabs.ts  useTheme.tsx
src/styles/: globals.css
src/types/: css.d.ts  tauri-plugins.d.ts
