[package]
name = "pdf-reader"
version = "1.0.0"
description = "A minimal, fast PDF reader"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pdf-reader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
